@@ -22,8 +22,12 @@
     "remove_owned_wishlist": "Remove owned games from wishlist",
     "donate": "Donate",
     "close": "Close",
+    "error": "An error occurred",
     "go": "Go",
     "activate": "Activate a product",
+    "activate_multiple_header": "Enter product codes below, one per line",
+    "activate_multiple": "Activate Multiple Products",
+    "activate_products": "Activate products",
     "coupon_application_note": "A coupon in your inventory will be applied automatically at checkout.",
     "hide": "Hide",
     "cards_owned": "__owned__ of __possible__ cards owned",
